force-app/main/default/objects/Opportunity/fields/Related_Deals__c.field-meta.xml
<CustomField>
    <fullName>Related_Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For first deal, relates the derivative opportunities such as renewals and upsells</description>
    <inlineHelpText>For first deal, relates the derivative opportunities such as renewals and upsells</inlineHelpText>
    <label>Related Deals</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Related Deals)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>