force-app/main/default/objects/Opportunity/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description>Accounting bucket that the revenue contributes to (i.e. net new revenue vs existing revenue)</description>
    <inlineHelpText>Accounting bucket that the revenue contributes to (i.e. net new revenue vs existing revenue)</inlineHelpText>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net New Revenue</fullName>
            </value>
            <value>
                <fullName>Existing Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>