force-app/main/default/objects/Opportunity/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR that qualified the lead and converted to a deal</description>
    <inlineHelpText>SDR that qualified the lead and converted to a deal</inlineHelpText>
    <label>SDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>