force-app/main/default/objects/Opportunity/fields/Submitted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Timestamp__c</fullName>
    <description>When did we receive or find this lead</description>
    <inlineHelpText>When did we receive or find this lead</inlineHelpText>
    <label>Submitted Timestamp</label>
    <type>DateTime</type>
</CustomField>