force-app/main/default/objects/Opportunity/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Current state of the deal as manually input by user</description>
    <inlineHelpText>Current state of the deal as manually input by user</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>