force-app/main/default/objects/Opportunity/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have they received a trial?</description>
    <inlineHelpText>Have they received a trial?</inlineHelpText>
    <label>Trial</label>
    <type>Checkbox</type>
</CustomField>