force-app/main/default/objects/Opportunity/fields/Trial_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Trial_End_Time__c</fullName>
    <description>Timestamp trial ends</description>
    <inlineHelpText>Timestamp trial ends</inlineHelpText>
    <label>Trial End Time</label>
    <type>DateTime</type>
</CustomField>