force-app/main/default/objects/Opportunity/fields/Trial_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Trial_Start_Time__c</fullName>
    <description>Timestamp trial starts</description>
    <inlineHelpText>Timestamp trial starts</inlineHelpText>
    <label>Trial Start Time</label>
    <type>DateTime</type>
</CustomField>