force-app/main/default/objects/Opportunity/fields/Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Trial_Type__c</fullName>
    <label>Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>