force-app/main/default/objects/Opportunity/fields/Type_of_deal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_deal__c</fullName>
    <description>What type of deal is this?</description>
    <inlineHelpText>What type of deal is this?</inlineHelpText>
    <label>Type of deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downsell</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>First deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>