force-app/main/default/objects/Opportunity/fields/Usage_Total_at_Submission__c.field-meta.xml
<CustomField>
    <fullName>Usage_Total_at_Submission__c</fullName>
    <description>The total characters used by this account at the point of lead submission/creation</description>
    <inlineHelpText>The total characters used by this account at the point of lead submission/creation</inlineHelpText>
    <label>Usage Total at Submission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>