force-app/main/default/objects/Opportunity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>Use case that best matches the application for this opportunity. To be automatically updated from Use case detail</description>
    <inlineHelpText>Use case that best matches the application for this opportunity. To be automatically updated from Use case detail</inlineHelpText>
    <label>Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Learning &amp; training</fullName>
            </value>
            <value>
                <fullName>Sports entertainment</fullName>
            </value>
            <value>
                <fullName>News articles</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Audiobooks</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Language Learning</fullName>
            </value>
            <value>
                <fullName>Chatbot/call centre</fullName>
            </value>
            <value>
                <fullName>Interactive Agent</fullName>
            </value>
            <value>
                <fullName>Dubbing</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Radio &amp; Media production</fullName>
            </value>
            <value>
                <fullName>Text-to-Speech</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Podcasts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>