force-app/main/default/objects/Opportunity/fields/Use_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Detail__c</fullName>
    <description>Use Case Detail as input in the contact sales form</description>
    <inlineHelpText>Use Case Detail as input in the contact sales form</inlineHelpText>
    <label>Use Case Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>