force-app/main/default/objects/Opportunity/fields/Vendor_Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Questionnaire_Status__c</fullName>
    <description>Current status of vendor / security questionnaire</description>
    <inlineHelpText>Current status of vendor / security questionnaire</inlineHelpText>
    <label>Vendor Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>