force-app/main/default/objects/Opportunity/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Conversational AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>