force-app/main/default/objects/Opportunity/recordTypes/Upsell.recordType-meta.xml
<RecordType>
    <fullName>Upsell</fullName>
    <active>true</active>
    <businessProcess>Upsell</businessProcess>
    <label>Upsell</label>
</RecordType>